# x402-agent-service-marketplace

./: .gitignore  Anchor.toml  CHECKLIST_BEFORE_SUBMISSION.md  CONTRIBUTING.md  Cargo.toml  DEPLOYMENT.md  FIXES_APPLIED.md  FIX_NPM_INSTALL.md  GITHUB_SETUP.md  HACKATHON_SUBMISSION.md  INSTALL_REQUIREMENTS.md  LICENSE  MANUAL_SETUP.md  NEXT_STEPS.md  PREPARE_FOR_GITHUB.md  PRESENTATION.md  PRESENTATION_README.md  PRESENTATION_SLIDES.html  PRE_SUBMISSION_CHECKLIST.md  PROJECT_SUMMARY.md  PUSH_TO_GITHUB.md  QUICKSTART.md  README.md  README_GITHUB.md  SECURITY_CHECK.md  SETUP_GUIDE.md  install-tools.ps1  package.json  push-to-github.ps1  setup-and-deploy.ps1
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml
backend/: package.json
backend/src/: index.ts
backend/src/idl/: x402_marketplace.json
backend/src/routes/: list.ts  register.ts  useService.ts
backend/src/solana/: program.ts
backend/src/types/: x402_marketplace.ts
examples/: test-x402-service.js
frontend/: index.html  package.json
frontend/src/: App.tsx  index.css
programs/x402-marketplace/: Cargo.toml
programs/x402-marketplace/src/: lib.rs
scripts/: deploy.sh  setup.sh
