[package]
name = "x402-marketplace"
version = "0.1.0"
description = "Agent Service Marketplace & Router on Solana with x402"
edition = "2021"

[workspace]
members = ["programs/*"]
resolver = "2"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1

