[package]
name = "x402-marketplace"
version = "0.1.0"
description = "Agent Service Marketplace & Router on Solana with x402"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "x402_marketplace"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.30.1"
anchor-spl = "0.30.1"

